--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css'
         integrity='sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw=='
         crossorigin='anonymous' />
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="css/style.css">
     <title>(insicurissimo) password generator</title>
     <script defer src="js/script.js"></script>
@@ -16,9 +17,21 @@
 
 <body>
 
+    <div class="container mt-5">
+        <div class="card text-center">
+            <div class="card-header">
+                Generatore di Password
+            </div>
+            <div class="card m-3">
+                <div class="card-body">
+                    <p class="mb-0">La password è: <span id="password"></span></p>
+                </div>
+            </div>
+        </div>
+    </div>
     <!-- Password Generated -->
 
-    <p>La password è: <span id="password"></span></p>
+
 
 </body>
 
