--- a/index.html
+++ b/index.html
@@ -17,19 +17,32 @@
 
 <body>
 
+    <!-- Password Generated -->
+
     <div class="container mt-5">
+
+        <!-- Card -->
+
         <div class="card text-center">
+
+            <!-- Card Header -->
+
             <div class="card-header">
                 Generatore di Password
             </div>
+
             <div class="card m-3">
+
+                <!-- Card Body -->
+
                 <div class="card-body">
                     <p class="mb-0">La password è: <span id="password"></span></p>
                 </div>
+
             </div>
         </div>
     </div>
-    <!-- Password Generated -->
+
 
 
 
